--- a/master.html
+++ b/master.html
@@ -6,14 +6,14 @@
     <meta content="" name="description">
     <meta content="michaseel, cologne" name="author">
     <meta content="3 days" name="revisit-after">
-    <meta name="date" content="31.03.2014 14:57:28">
+    <meta name="date" content="02.04.2014 11:10:35">
     <link rel="stylesheet" href="styles/main.css"/>
   </head>
   <body class=" master">
     <!--include _breadcrumb-->
-    <header class="navbar navbar-inverse navbar-fixed-top">
+    <header id="header" class="navbar navbar-fixed-top">
       <div class="container">
-        <div class="row padding-medium">
+        <div class="row">
           <div class="col-sm-9 col-xs-8"><a href="/">
               <div class="h2">Michael Seel</div></a></div>
           <div class="col-xs-1 text-right"><a href="#"><i class="glyphicon glyphicon-user icon-large"></i></a></div>
@@ -22,6 +22,7 @@
         </div>
       </div>
     </header>
+    <div class="blurheader"></div>
     <div role="navigation" class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
