--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta content="" name="description">
     <meta content="michaseel, cologne" name="author">
     <meta content="3 days" name="revisit-after">
-    <meta name="date" content="31.03.2014 14:57:28">
+    <meta name="date" content="02.04.2014 11:10:35">
     <link rel="stylesheet" href="styles/main.css"/>
   </head>
   <body class=" index">
     <!--include _breadcrumb-->
-    <header class="navbar navbar-inverse navbar-fixed-top">
+    <header id="header" class="navbar navbar-fixed-top">
       <div class="container">
-        <div class="row padding-medium">
+        <div class="row">
           <div class="col-sm-9 col-xs-8"><a href="/">
               <div class="h2">Michael Seel</div></a></div>
           <div class="col-xs-1 text-right"><a href="#"><i class="glyphicon glyphicon-user icon-large"></i></a></div>
@@ -22,58 +22,66 @@
         </div>
       </div>
     </header>
-    <div style="background-image: url(images/slice1.jpg)" class="row bg-black slide">
+    <div class="blurheader"></div>
+    <div id="content">
+      <div style="background-image: url(images/slice-person.jpg);" class="row slide">
+        <div class="container">
+          <div class="col-xs-7 col-xs-offset-5">
+            <h1>Hi! I'm Michael</h1>
+            <h2>i live in Cologne & <br>i love building the web...</h2>
+          </div>
+        </div>
+      </div>
+      <div style="background-image: url(images/slice-web.jpg)" class="row bg-black slide">
+        <div class="container">
+          <div class="col-sm-12">
+            <h1>Testing Lorem longer long</h1>
+            <h2>You like my style?</h2>
+          </div>
+        </div>
+      </div>
       <div class="container">
-        <div class="col-sm-12">
-          <h1>Testing Lorem longer long</h1>
-          <h2>You like my style?</h2>
+        <div class="row">
+          <div class="col-lg-12">
+            <h1>Headlines</h1>
+            <hr>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-6">
+            <h1>h1 Lorem ipsum dolor sit amet</h1>
+            <h2>h2 Lorem ipsum dolor sit amet</h2>
+            <h3>h3 Lorem ipsum dolor sit amet</h3>
+            <h4>h4 Lorem ipsum dolor sit amet</h4>
+            <h5>h5 Lorem ipsum dolor sit amet</h5>
+            <h6>h6 Lorem ipsum dolor sit amet</h6>
+            <h1>h1 Lorem ipsum dolor sit amet</h1>
+            <h2>h2 Lorem ipsum dolor sit amet</h2>
+            <h3>h3 Lorem ipsum dolor sit amet</h3>
+            <h4>h4 Lorem ipsum dolor sit amet</h4>
+            <h5>h5 Lorem ipsum dolor sit amet</h5>
+            <h6>h6 Lorem ipsum dolor sit amet</h6>
+            <h1>h1 Lorem ipsum dolor sit amet</h1>
+            <h2>h2 Lorem ipsum dolor sit amet</h2>
+            <h3>h3 Lorem ipsum dolor sit amet</h3>
+            <h4>h4 Lorem ipsum dolor sit amet</h4>
+            <h5>h5 Lorem ipsum dolor sit amet</h5>
+            <h6>h6 Lorem ipsum dolor sit amet</h6>
+            <h1>h1 Lorem ipsum dolor sit amet</h1>
+            <h2>h2 Lorem ipsum dolor sit amet</h2>
+            <h3>h3 Lorem ipsum dolor sit amet</h3>
+            <h4>h4 Lorem ipsum dolor sit amet</h4>
+            <h5>h5 Lorem ipsum dolor sit amet</h5>
+            <h6>h6 Lorem ipsum dolor sit amet</h6>
+          </div>
         </div>
       </div>
     </div>
-    <div style="background-image: url(images/slice2.jpg)" class="row bg-black slide">
-      <div class="container">
-        <div class="col-sm-12">
-          <h1>Testing Lorem longer long</h1>
-          <h2>You like my style?</h2>
-        </div>
-      </div>
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12">
-          <h1>Headlines</h1>
-          <hr>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-lg-6">
-          <h1>h1 Lorem ipsum dolor sit amet</h1>
-          <h2>h2 Lorem ipsum dolor sit amet</h2>
-          <h3>h3 Lorem ipsum dolor sit amet</h3>
-          <h4>h4 Lorem ipsum dolor sit amet</h4>
-          <h5>h5 Lorem ipsum dolor sit amet</h5>
-          <h6>h6 Lorem ipsum dolor sit amet</h6>
-          <h1>h1 Lorem ipsum dolor sit amet</h1>
-          <h2>h2 Lorem ipsum dolor sit amet</h2>
-          <h3>h3 Lorem ipsum dolor sit amet</h3>
-          <h4>h4 Lorem ipsum dolor sit amet</h4>
-          <h5>h5 Lorem ipsum dolor sit amet</h5>
-          <h6>h6 Lorem ipsum dolor sit amet</h6>
-          <h1>h1 Lorem ipsum dolor sit amet</h1>
-          <h2>h2 Lorem ipsum dolor sit amet</h2>
-          <h3>h3 Lorem ipsum dolor sit amet</h3>
-          <h4>h4 Lorem ipsum dolor sit amet</h4>
-          <h5>h5 Lorem ipsum dolor sit amet</h5>
-          <h6>h6 Lorem ipsum dolor sit amet</h6>
-          <h1>h1 Lorem ipsum dolor sit amet</h1>
-          <h2>h2 Lorem ipsum dolor sit amet</h2>
-          <h3>h3 Lorem ipsum dolor sit amet</h3>
-          <h4>h4 Lorem ipsum dolor sit amet</h4>
-          <h5>h5 Lorem ipsum dolor sit amet</h5>
-          <h6>h6 Lorem ipsum dolor sit amet</h6>
-        </div>
-      </div>
-    </div>
+    <svg version="1.1" xmlns="http://www.w3.org/2000/svg">
+      <filter id="blur">
+        <fegaussianblur stddeviation="3"></fegaussianblur>
+      </filter>
+    </svg>
     <!-- Footer-->
     <footer></footer>
     <script src="scripts/main.js"></script>
