--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta content="" name="description">
     <meta content="michaseel, cologne" name="author">
     <meta content="3 days" name="revisit-after">
-    <meta name="date" content="02.04.2014 11:10:35">
+    <meta name="date" content="02.04.2014 12:21:40">
     <link rel="stylesheet" href="styles/main.css"/>
   </head>
   <body class=" index">
@@ -23,6 +23,7 @@
       </div>
     </header>
     <div class="blurheader"></div>
+    <div class="fadeout"></div>
     <div id="content">
       <div style="background-image: url(images/slice-person.jpg);" class="row slide">
         <div class="container">
@@ -40,39 +41,41 @@
           </div>
         </div>
       </div>
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12">
-            <h1>Headlines</h1>
-            <hr>
+      <div class="row bg-gray-dark">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-12">
+              <h1>Headlines</h1>
+              <hr>
+            </div>
           </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-6">
-            <h1>h1 Lorem ipsum dolor sit amet</h1>
-            <h2>h2 Lorem ipsum dolor sit amet</h2>
-            <h3>h3 Lorem ipsum dolor sit amet</h3>
-            <h4>h4 Lorem ipsum dolor sit amet</h4>
-            <h5>h5 Lorem ipsum dolor sit amet</h5>
-            <h6>h6 Lorem ipsum dolor sit amet</h6>
-            <h1>h1 Lorem ipsum dolor sit amet</h1>
-            <h2>h2 Lorem ipsum dolor sit amet</h2>
-            <h3>h3 Lorem ipsum dolor sit amet</h3>
-            <h4>h4 Lorem ipsum dolor sit amet</h4>
-            <h5>h5 Lorem ipsum dolor sit amet</h5>
-            <h6>h6 Lorem ipsum dolor sit amet</h6>
-            <h1>h1 Lorem ipsum dolor sit amet</h1>
-            <h2>h2 Lorem ipsum dolor sit amet</h2>
-            <h3>h3 Lorem ipsum dolor sit amet</h3>
-            <h4>h4 Lorem ipsum dolor sit amet</h4>
-            <h5>h5 Lorem ipsum dolor sit amet</h5>
-            <h6>h6 Lorem ipsum dolor sit amet</h6>
-            <h1>h1 Lorem ipsum dolor sit amet</h1>
-            <h2>h2 Lorem ipsum dolor sit amet</h2>
-            <h3>h3 Lorem ipsum dolor sit amet</h3>
-            <h4>h4 Lorem ipsum dolor sit amet</h4>
-            <h5>h5 Lorem ipsum dolor sit amet</h5>
-            <h6>h6 Lorem ipsum dolor sit amet</h6>
+          <div class="row">
+            <div class="col-lg-6">
+              <h1>h1 Lorem ipsum dolor sit amet</h1>
+              <h2>h2 Lorem ipsum dolor sit amet</h2>
+              <h3>h3 Lorem ipsum dolor sit amet</h3>
+              <h4>h4 Lorem ipsum dolor sit amet</h4>
+              <h5>h5 Lorem ipsum dolor sit amet</h5>
+              <h6>h6 Lorem ipsum dolor sit amet</h6>
+              <h1>h1 Lorem ipsum dolor sit amet</h1>
+              <h2>h2 Lorem ipsum dolor sit amet</h2>
+              <h3>h3 Lorem ipsum dolor sit amet</h3>
+              <h4>h4 Lorem ipsum dolor sit amet</h4>
+              <h5>h5 Lorem ipsum dolor sit amet</h5>
+              <h6>h6 Lorem ipsum dolor sit amet</h6>
+              <h1>h1 Lorem ipsum dolor sit amet</h1>
+              <h2>h2 Lorem ipsum dolor sit amet</h2>
+              <h3>h3 Lorem ipsum dolor sit amet</h3>
+              <h4>h4 Lorem ipsum dolor sit amet</h4>
+              <h5>h5 Lorem ipsum dolor sit amet</h5>
+              <h6>h6 Lorem ipsum dolor sit amet</h6>
+              <h1>h1 Lorem ipsum dolor sit amet</h1>
+              <h2>h2 Lorem ipsum dolor sit amet</h2>
+              <h3>h3 Lorem ipsum dolor sit amet</h3>
+              <h4>h4 Lorem ipsum dolor sit amet</h4>
+              <h5>h5 Lorem ipsum dolor sit amet</h5>
+              <h6>h6 Lorem ipsum dolor sit amet</h6>
+            </div>
           </div>
         </div>
       </div>
