--- a/master.html
+++ b/master.html
@@ -6,7 +6,7 @@
     <meta content="" name="description">
     <meta content="michaseel, cologne" name="author">
     <meta content="3 days" name="revisit-after">
-    <meta name="date" content="02.04.2014 11:10:35">
+    <meta name="date" content="02.04.2014 12:21:40">
     <link rel="stylesheet" href="styles/main.css"/>
   </head>
   <body class=" master">
@@ -23,6 +23,7 @@
       </div>
     </header>
     <div class="blurheader"></div>
+    <div class="fadeout"></div>
     <div role="navigation" class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
