--- a/master.html
+++ b/master.html
@@ -6,7 +6,7 @@
     <meta content="" name="description">
     <meta content="michaseel, cologne" name="author">
     <meta content="3 days" name="revisit-after">
-    <meta name="date" content="02.04.2014 13:52:11">
+    <meta name="date" content="02.04.2014 17:55:52">
     <link rel="stylesheet" href="styles/main.css"/>
   </head>
   <body class=" master">
@@ -16,9 +16,12 @@
         <div class="row">
           <div class="col-sm-9 col-xs-8"><a href="/">
               <div class="h2">Michael Seel</div></a></div>
-          <div class="col-xs-1 text-right"><a href="#"><i class="glyphicon glyphicon-user icon-large"></i></a></div>
-          <div class="col-xs-1 text-right"><a href="#"><i class="glyphicon glyphicon-flash icon-large"></i></a></div>
-          <div class="col-xs-1 text-right"><a href="#"><i class="glyphicon glyphicon-book icon-large"></i></a></div>
+          <div class="col-xs-1 text-right"><a href="#"><i class="glyphicon glyphicon-user icon-large"></i>
+              <div class="hidden-xs">Profile</div></a></div>
+          <div class="col-xs-1 text-right"><a href="#"><i class="glyphicon glyphicon-flash icon-large"></i>
+              <div class="hidden-xs">Work</div></a></div>
+          <div class="col-xs-1 text-right"><a href="#"><i class="glyphicon glyphicon-book icon-large"></i>
+              <div class="hidden-xs">Blog</div></a></div>
         </div>
       </div>
     </header>
