--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta content="" name="description">
     <meta content="michaseel, cologne" name="author">
     <meta content="3 days" name="revisit-after">
-    <meta name="date" content="02.04.2014 17:55:52">
+    <meta name="date" content="03.04.2014 19:22:06">
     <link rel="stylesheet" href="styles/main.css"/>
   </head>
   <body class=" index">
     <!--include _breadcrumb-->
     <header id="header" class="navbar navbar-fixed-top">
       <div class="container">
+        <div class="logo"></div>
         <div class="row">
           <div class="col-sm-9 col-xs-8"><a href="/">
               <div class="h2">Michael Seel</div></a></div>
