--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta content="" name="description">
     <meta content="michaseel, cologne" name="author">
     <meta content="3 days" name="revisit-after">
-    <meta name="date" content="03.04.2014 19:22:06">
+    <meta name="date" content="04.04.2014 11:06:17">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/main.css"/>
   </head>
   <body class=" index">
@@ -31,17 +32,21 @@
     <div id="content">
       <div style="background-image: url(images/slice-person.jpg);" class="row slide">
         <div class="container">
-          <div class="col-xs-7 col-xs-offset-5">
-            <h1>Hi! I'm Michael</h1>
-            <h2>i live in Cologne & <br>i love building the web...</h2>
+          <div class="row">
+            <div class="col-xs-7 col-xs-offset-5">
+              <h1>Hi! I'm Michael</h1>
+              <h2>i live in Cologne & <br>i love building the web...</h2>
+            </div>
           </div>
         </div>
       </div>
       <div style="background-image: url(images/slice-web.jpg)" class="row bg-black slide">
         <div class="container">
-          <div class="col-sm-12">
-            <h1>Testing Lorem longer long</h1>
-            <h2>You like my style?</h2>
+          <div class="row">
+            <div class="col-sm-12">
+              <h1>Testing around a little bit</h1>
+              <h2>You like my style?</h2>
+            </div>
           </div>
         </div>
       </div>
