--- a/master.html
+++ b/master.html
@@ -6,7 +6,8 @@
     <meta content="" name="description">
     <meta content="michaseel, cologne" name="author">
     <meta content="3 days" name="revisit-after">
-    <meta name="date" content="03.04.2014 19:22:06">
+    <meta name="date" content="04.04.2014 11:06:18">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/main.css"/>
   </head>
   <body class=" master">
